<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Repay</string>
    <string name="refresh">Refresh</string>
    <string name="author">Matt Allen</string>
    <string name="contentDesc">Content</string>
    <string name="title_activity_frienddetails">Overview</string>
    <string name="title_activity_add_debt">Add Debt</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
	<string name="okay">Okay</string>
	<string name="add">Add</string>
	<string name="share">Share</string>
	<string name="info">Info</string>
	<string name="delete">Delete</string>

    <string name="action_settings">Settings</string>
    <string name="action_adddebt">Add Debt</string>
    <string name="action_addperson">Add Person</string>
    <string name="action_total">Total</string>
    <string name="action_cleardebt">Debt Repaid</string>
    <string name="action_info">Help</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="action_delete">Delete</string>
    <string name="action_unLinkContact">Unlink Contact</string>
    <string name="action_reLinkContact">Link To Contact</string>
    <string name="action_recalculateTotals">Recalculate Totals</string>

    <string name="enter_amount">Enter Amount</string>
    <string name="get_started">Get Started</string>
	<string name="history">History</string>
	<string name="even_debt">You\'re Even</string>
	<string name="close">Close</string>
	<string name="problem_getting_from_contacts">Problem in getting result from your contacts</string>
	<string name="problem_adding_to_repay">There was a problem in adding this person to Repay</string>
	<string name="friend_could_not_be_added">Friend could not be added</string>
	<string name="enter_name">Name</string>
	<string name="please_enter_name">Please Enter A Name</string>
	<string name="manage_debt">Manage Debt</string>
	<string name="youre_owed">You\'re Owed</string>
	<string name="backup">Backup</string>
	<string name="restore_summary">Restore from an existing backup in Google Drive. Anything already in the app will be removed and replaced by the data in the backup</string>
	<string name="backup_summary">Backup all of your added people and their debts to Google Drive</string>
	<string name="auto_backup">Auto Backup</string>
	<string name="auto_backup_summary_off">Changes will only be synced when you request them. Request a backup using the button below.</string>
	<string name="auto_backup_summary_on">All changes will be synced to Google Drive when you make any changes</string>
	<string name="restore_from_google">Restore From Google Drive</string>
	<string name="restore">Restore</string>
	<string name="nothing_here">No Debts Here</string>
	<string name="nobody_here">Nobody Added Yet</string>
	<string name="i_am_owed">I Am Owed</string>
	<string name="im_owed">I\'m Owed</string>
	<string name="total">Total</string>
	<string name="activity_migration">Migration</string>
	<string name="been_some_changes">So, there\'s been some changes...</string>
	<string name="migration_message">Your records are now stored slightly differently, so they need to be moved over to the location. This should only take a few seconds.</string>

</resources>
