<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_addDebt"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/action_adddebt"/>
    <item
        android:id="@+id/action_reLinkContact"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:title="@string/action_reLinkContact"/>
    <item
        android:id="@+id/action_unLinkContact"
        android:orderInCategory="21"
        app:showAsAction="never"
        android:title="@string/action_unLinkContact"/>

</menu>
