<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_adddebt"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_adddebt"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_total"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_total"
        android:icon="@drawable/ic_action_total"/>
    <item 
        android:id="@+id/action_recalculateTotals"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_recalculateTotals"/>

</menu>