<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:id="@+id/footer"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp">

		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/secondary_text" />

		<Button
			android:id="@+id/done"
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_below="@id/divider"
			android:layout_centerVertical="true"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:minHeight="36dp"
			android:minWidth="88dp"
			android:onClick="onNextButtonClick"
			android:paddingLeft="4dp"
			android:paddingRight="4dp"
			android:text="@string/next"
			android:textAllCaps="true" />

		<Button
			android:id="@+id/add_person"
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="120dp"
			android:layout_height="48dp"
			android:layout_below="@id/divider"
			android:layout_centerVertical="true"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_toLeftOf="@id/done"
			android:layout_toStartOf="@id/done"
			android:minHeight="36dp"
			android:minWidth="88dp"
			android:paddingLeft="4dp"
			android:paddingRight="4dp"
			android:text="@string/action_addperson"
			android:textAllCaps="true" />

	</RelativeLayout>

	<TextView
		android:id="@+id/empty"
		style="@style/EmptyText"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/footer"
		android:layout_centerInParent="true"
		android:gravity="center"
		android:text="@string/nobody_here" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/footer"
		android:clipToPadding="false"
		android:paddingTop="8dp" />

</RelativeLayout>
